--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.8.0",
+    "@radix-ui/react-slot": "^1.2.0",
     "@stripe/stripe-js": "^7.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase-admin": "^12.6.0",
-    "next": "15.3.0",
+    "lucide-react": "^0.488.0",
+    "next": "14.1.0",
     "next-auth": "^5.0.0-beta.25",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "stripe": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stripe": "^18.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
+    "@swc/helpers": "^0.5.3"
   }
 }
