--- a/package.json
+++ b/package.json
@@ -15,23 +15,25 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase-admin": "^12.6.0",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.488.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@swc/helpers": "^0.5.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@swc/helpers": "^0.5.3"
+    "typescript": "^5"
   }
 }
